Reactive forms adicionados a outras telas de login; code input adicionado nas telas de verificação por código; mudanças significatias em designes, como hifhlight-colors de ion-items; funcionalidade adicionada as checkbox da tela ultimo-passo

--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -42,34 +42,56 @@
 
     </div>
 
-    <ion-item lines="full">
-      <ion-label position="floating">Nome</ion-label>
-      <ion-input type="text" placeholder="Digite aqui o nome" required></ion-input>
-    </ion-item>
+    <form [formGroup]="cadastroForm" (ngSubmit)="submit()">
+      <ion-item lines="full">
+        <ion-label position="floating">Nome de usuário</ion-label>
+        <ion-input formControlName="nome" type="text" placeholder="Digite aqui o nome" required></ion-input>
+      </ion-item>
+      <div *ngFor="let error of errorMessages.nome">
+        <ng-container *ngIf="nome.hasError(error.type) && (nome.dirty || nome.touched)">
+          <small class="error-message">{{error.message}}</small>
+        </ng-container>
+      </div>
 
-    <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" placeholder="Digite aqui o email" required></ion-input>
-    </ion-item>
+      <ion-item lines="full">
+        <ion-label position="floating">Email</ion-label>
+        <ion-input formControlName="email" type="email" placeholder="Digite aqui o email" required></ion-input>
+      </ion-item>
+      <div *ngFor="let error of errorMessages.email">
+        <ng-container *ngIf="email.hasError(error.type) && (email.dirty || email.touched)">
+          <small class="error-message">{{error.message}}</small>
+        </ng-container>
+      </div>
 
-    <ion-item lines="full">
-      <ion-label position="floating">Senha</ion-label>
-      <ion-input type="password" placeholder="Digite aqui a senha" required></ion-input>
-    </ion-item>
+      <ion-item lines="full">
+        <ion-label position="floating">Senha</ion-label>
+        <ion-input formControlName="senha" type="password" placeholder="Digite aqui a senha" required></ion-input>
+      </ion-item>
+      <div *ngFor="let error of errorMessages.senha">
+        <ng-container *ngIf="senha.hasError(error.type) && (senha.dirty || senha.touched)">
+          <small class="error-message">{{error.message}}</small>
+        </ng-container>
+      </div>
 
-    <ion-item lines="full">
-      <ion-label position="floating">Confirmar senha</ion-label>
-      <ion-input type="password" placeholder="Confirme aqui a senha" required></ion-input>
-    </ion-item>
+      <ion-item lines="full">
+        <ion-label position="floating">Confirmar senha</ion-label>
+        <ion-input formControlName="confirmar_senha" type="password" placeholder="Confirme aqui a senha" required></ion-input>
+      </ion-item>
+      <div *ngFor="let error of errorMessages.confirmar_senha">
+        <ng-container *ngIf="confirmar_senha.hasError(error.type) && (confirmar_senha.dirty || confirmar_senha.touched)">
+          <small class="error-message">{{error.message}}</small>
+        </ng-container>
+      </div>
 
-    <div id="divTermos">
-      <ion-label>Ao clicar em Continuar, você concorda com nossos</ion-label><br>
-      <a id="Termos">Termos e políticas de dados.</a>
-    </div>
+      <div id="divTermos">
+        <ion-label>Ao clicar em Continuar, você concorda com nossos</ion-label><br>
+        <a id="Termos">Termos e políticas de dados.</a>
+      </div>
 
-    <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round" (click)="btnContinuar()">
-      Continuar
-    </ion-button>
+      <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round" [disabled]="cadastroForm.invalid">
+        Continuar
+      </ion-button>
+    </form>
 
     <fieldset>
       <legend>Ou cadastre-se com</legend>
@@ -94,6 +116,5 @@
         </ion-thumbnail>
       </ion-button>
     </div>
-
   </div>
 </ion-content>
