--- a/src/app/esqueceu-senha/esqueceu-senha.page.scss
+++ b/src/app/esqueceu-senha/esqueceu-senha.page.scss
@@ -108,6 +108,13 @@ ion-item{
   --border-color: #707070;
   --background: white;
   --min-height: 16px;
+  --highlight-color-focused: var(--ion-color-primary);
+  --highlight-color-valid: var(--ion-color-primary);
+  --highlight-color-invalid: var(--ion-color-primary);
+}
+
+.error-message{
+  color: var(--ion-color-danger);
 }
 
 /*============================================================================================================*/
