--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -70,6 +70,9 @@ ion-item{
   --border-color: #707070;
   --background: white;
   --min-height: 16px;
+  --highlight-color-focused: var(--ion-color-primary);
+  --highlight-color-valid: var(--ion-color-primary);
+  --highlight-color-invalid: var(--ion-color-primary);
 }
 
 .error-message{
