Tela de Ultimo Passo agora com back-end funcional, imagens do post tiveram dimensões alteradas, alem de alterações minimas nos detalhes de outras telas de login

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,6 +40,7 @@ ion-menu{
 
 .divDados h3{
   font-size: 16px;
+  margin-top: 4px;
 }
 
 .divDados p{
@@ -102,7 +103,7 @@ ion-toggle{
   width: 28px;
   --handle-width: 14px;
   --handle-height: 14px;
-  --background-checked: #00f1bd54;
+  --background-checked: #2E8B57;
   --handle-background-checked: #00f9bb;
 }
 
