--- a/src/app/ultimo-passo/ultimo-passo.page.html
+++ b/src/app/ultimo-passo/ultimo-passo.page.html
@@ -22,78 +22,67 @@
     <p id="Descricao">preencha o campo abaixo</p>
 
     <div id="stepProgressBar">
-
-      <div class="stepComplete">
-        <div class="bulletProgressComplete">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
-      <div class="stepComplete">
-        <div class="bulletProgressComplete">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
-      <div class="step">
-        <div class="bullet">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
+      <ion-icon name="checkmark-circle-outline" class="checkComplete"></ion-icon>
+      <div class="processComplete"></div>
+      <ion-icon name="checkmark-circle-outline" class="checkComplete"></ion-icon>
+      <div class="processComplete"></div>
+      <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
     </div>
 
     <div class="divContexto">
       <h4>De onde você é?</h4>
     </div>
 
-    <div class="lugares">
-      <ion-item lines="full">
-        <ion-label position="stacked">País</ion-label>
-        <ion-select [(ngModel)]="option1" [disabled]="isDisabled1">
-          <ion-select-option>Brasil</ion-select-option>
-        </ion-select>
-      </ion-item>
-      <ion-item lines="full">
-        <ion-label position="stacked">Cidade</ion-label>
-        <ion-select [(ngModel)]="option2" [disabled]="isDisabled1">
-          <ion-select-option>São Paulo</ion-select-option>
-        </ion-select>
-      </ion-item>
-    </div>
+    <form (ngSubmit)="submit()">
+      <div class="lugares">
+        <ion-item lines="full">
+          <ion-label position="stacked">País</ion-label>
+          <ion-select (ionChange)="itemSelected1($event)" [(ngModel)]="meu_pais" name="meupais" [disabled]="isDisabled1">
+            <ion-select-option>Brasil</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item lines="full">
+          <ion-label position="stacked">Cidade</ion-label>
+          <ion-select (ionChange)="itemSelected2($event)" [(ngModel)]="minha_cidade" name="minhacidade" [disabled]="isDisabled1">
+            <ion-select-option>São Paulo</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </div>
 
-    <div class="divCheck">
-      <ion-checkbox (ionChange)="onCheckboxChange1($event)"></ion-checkbox>
-      <ion-label>Prefiro não dizer</ion-label>
-    </div>
+      <div class="divCheck">
+        <ion-checkbox (ionChange)="onCheckboxChange1($event)"></ion-checkbox>
+        <ion-label>Prefiro não dizer</ion-label>
+      </div>
 
-    <div class="divContexto">
-      <h4>Aonde quer conhecer?</h4>
-    </div>
+      <div class="divContexto">
+        <h4>Aonde quer conhecer?</h4>
+      </div>
 
-    <div class="lugares">
-      <ion-item lines="full">
-        <ion-label position="stacked">País</ion-label>
-        <ion-select [(ngModel)]="option3" [disabled]="isDisabled2">
-          <ion-select-option>Brasil</ion-select-option>
-        </ion-select>
-      </ion-item>
-      <ion-item lines="full">
-        <ion-label position="stacked">Cidade</ion-label>
-        <ion-select [(ngModel)]="option4"  [disabled]="isDisabled2">
-          <ion-select-option>São Paulo</ion-select-option>
-        </ion-select>
-      </ion-item>
-    </div>
+      <div class="lugares">
+        <ion-item lines="full">
+          <ion-label position="stacked">País</ion-label>
+          <ion-select (ionChange)="itemSelected4($event)" [(ngModel)]="outro_pais" name="outropais" [disabled]="isDisabled2">
+            <ion-select-option>Brasil</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item lines="full">
+          <ion-label position="stacked">Cidade</ion-label>
+          <ion-select (ionChange)="itemSelected5($event)" [(ngModel)]="outra_cidade" name="outracidade" [disabled]="isDisabled2">
+            <ion-select-option>São Paulo</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </div>
 
-    <div class="divCheck">
-      <ion-checkbox (ionChange)="onCheckboxChange2($event)"></ion-checkbox>
-      <ion-label>Prefiro não dizer</ion-label>
-    </div>
+      <div class="divCheck">
+        <ion-checkbox (ionChange)="onCheckboxChange2($event)"></ion-checkbox>
+        <ion-label>Prefiro não dizer</ion-label>
+      </div>
 
-    <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round">
-      Continuar
-    </ion-button>
+      <ion-button type="submit" id="btnCadastrarConta" expand="full" shape="round" [disabled]="btnDisabled">
+        Continuar
+      </ion-button>
+    </form>
+
 
   </div>
 </ion-content>
