--- a/src/app/ultimo-passo/ultimo-passo.page.scss
+++ b/src/app/ultimo-passo/ultimo-passo.page.scss
@@ -70,59 +70,26 @@ h3{
   justify-content: center;
 }
 
-.step{
-  margin-left: 10%;
-  margin-right: 10%;
-  position: relative;
-  border: 1px solid #707070;
-  border-radius: 20px;
-  width: 15px;
-  height: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-  color: #707070;
+.process{
+  height: 2px;
+  background:#707070;
+  width: 50px;
 }
 
-.stepComplete{
-  margin-left: 10%;
-  margin-right: 10%;
-  position: relative;
-  border: 1px solid #00f9bb;
-  border-radius: 20px;
-  width: 15px;
-  height: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-  color: #00f9bb;
-}
-
-.bulletProgressComplete::after{
-  content: '';
-  position: absolute;
-  width: 63px;
-  height: 1px;
-  background: #00f9bb;
-  left: 14px;
-  bottom: 6px;
-}
-
-.bulletProgress::after{
-  content: '';
-  position: absolute;
-  width: 63px;
-  height: 1px;
-  background: #707070;
-  left: 14px;
-  bottom: 6px;
+.processComplete{
+  height: 2px;
+  background:#00f9bb;
+  width: 50px;
 }
 
 .check{
-  font-size: 13px;
-  border-radius: 20px;
+  font-size: 18px;
+  color:#707070;
+}
+
+.checkComplete{
+  color: #00f9bb;
+  font-size: 18px;
 }
 
 /*============================================================================================================*/
@@ -194,5 +161,5 @@ h3{
   font-weight: bold;
   color: white;
   --background: #00f9bb;
-  margin-top: 10%;
+  margin-top: 20px;
 }
