Imagens do post ajustadas

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -25,17 +25,19 @@
       </p>
     </div>
 
-    <div class="divImagens">
-      <img class="divEsquerda" src="/assets/monument1.jpg">
-      <div class="verticalLine"></div>
 
-      <div class="divDireita">
-        <img class="divImgMenor" src="/assets/monument2.jpg">
-        <div class="horizontalLine"></div>
-        <img class="divImgMenor" src="/assets/comida.jpg">
+  <div class="divImagens">
+    <div class="divMaior"></div>
+    <div class="linhaVertical"></div>
 
-      </div>
+    <div class="divDireita">
+      <div class="divMenor"></div>
+      <div class="linhaHorizontal"></div>
+      <div class="divMenor2"></div>
     </div>
+  </div>
+
+
 
     <div class="divRelevancia">
 
