Alterações de tamanho de fontes e dimensionamento de outros elementos, além do aumento das imagens do post

--- a/src/app/cadastro/cadastro.page.scss
+++ b/src/app/cadastro/cadastro.page.scss
@@ -97,7 +97,7 @@ ion-item{
 .error-message{
   color: var(--ion-color-danger);
   font-size: 10px;
-  text-align: left;
+  justify-content: center;
   display: flex;
   margin-top: 3px
 }
