--- a/src/app/codigo-recuperar/codigo-recuperar.page.html
+++ b/src/app/codigo-recuperar/codigo-recuperar.page.html
@@ -22,25 +22,11 @@
     <p id="Descricao">preencha o campo para recuperar sua senha</p>
 
     <div id="stepProgressBar">
-
-      <div class="stepComplete">
-        <div class="bulletProgressComplete">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
-      <div class="step">
-        <div class="bulletProgress">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
-      <div class="step">
-        <div class="bullet">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
+      <ion-icon name="checkmark-circle-outline" class="checkComplete"></ion-icon>
+      <div class="processComplete"></div>
+      <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
+      <div class="process"></div>
+      <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
     </div>
 
     <div id="divContexto">
