--- a/src/app/esqueceu-senha/esqueceu-senha.page.scss
+++ b/src/app/esqueceu-senha/esqueceu-senha.page.scss
@@ -70,34 +70,15 @@ h3{
   justify-content: center;
 }
 
-.step{
-  margin-left: 10%;
-  margin-right: 10%;
-  position: relative;
-  border: 1px solid #707070;
-  border-radius: 20px;
-  width: 15px;
-  height: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white;
-  color: #707070;
-}
-
-.bulletProgress::after{
-  content: '';
-  position: absolute;
-  width: 63px;
-  height: 1px;
-  background: #707070;
-  left: 14px;
-  bottom: 6px;
+.process{
+  height: 2px;
+  background:#707070;
+  width: 50px;
 }
 
 .check{
-  font-size: 13px;
-  border-radius: 20px;
+  font-size: 18px;
+  color:#707070;
 }
 
 /*============================================================================================================*/
@@ -115,6 +96,10 @@ ion-item{
 
 .error-message{
   color: var(--ion-color-danger);
+  font-size: 10px;
+  justify-content: center;
+  display: flex;
+  margin-top: 3px
 }
 
 /*============================================================================================================*/
