--- a/src/app/redefinir-senha/redefinir-senha.page.html
+++ b/src/app/redefinir-senha/redefinir-senha.page.html
@@ -21,25 +21,11 @@
     <p id="Descricao">preencha o campo para recuperar sua senha</p>
 
     <div id="stepProgressBar">
-
-      <div class="stepComplete">
-        <div class="bulletProgressComplete">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
-      <div class="stepComplete">
-        <div class="bulletProgressComplete">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
-      <div class="step">
-        <div class="bullet">
-          <ion-icon name="checkmark-outline" class="check"></ion-icon>
-        </div>
-      </div>
-
+      <ion-icon name="checkmark-circle-outline" class="checkComplete"></ion-icon>
+      <div class="processComplete"></div>
+      <ion-icon name="checkmark-circle-outline" class="checkComplete"></ion-icon>
+      <div class="processComplete"></div>
+      <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
     </div>
 
     <form [formGroup]="redefinirForm" (ngSubmit)="submit()">
