--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -6,9 +6,9 @@
         <ion-avatar> <img src="/assets/jesse.jpg"> </ion-avatar>
       </div>
       <div class="divContexto">
-        <p>Jesse Pinkman&nbsp;-&nbsp;</p>
-        <p>França&nbsp;-&nbsp;</p>
-        <p>París</p>
+        <p>Jesse Pinkman&nbsp;</p>
+        <ion-label class="lugar">em&nbsp;França</ion-label>
+        <ion-label class="lugar">,&nbsp;París</ion-label>
       </div>
       <div class="divTempo">
         <p>X dias atrás</p>
