--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div id="divLogoInicial">
-    <img src="/assets/logoinicial.png" id="logoInicial">
+    <img src="/assets/logo.svg" id="logoInicial">
   </div>
 
   <div id="divBtn">
