--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,14 +2,12 @@
   <ion-toolbar>
 
     <ion-buttons slot="start">
-      <ion-button (click)="btnVoltar()">
-        <ion-icon slot="icon-only" name="chevron-back-outline" id="btnBack"></ion-icon>
-      </ion-button>
+      <ion-back-button icon="chevron-back-outline"></ion-back-button>
     </ion-buttons>
 
-    <div id="divAjuste">
-      <img src= "/assets/travellogo.png" id="logoPrincipal"> <!--Usar esta tag para utilizar imagens-->
-    </div>
+    <ion-title>
+      <img src= "/assets/logoprincipal.svg" id="logoPrincipal">
+    </ion-title>
 
   </ion-toolbar>
 </ion-header>
