--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,23 +1,17 @@
 <ion-header>
   <ion-toolbar>
 
-    <div class="divAjuste">
-      <ion-buttons>
-        <ion-menu-button menu="main-menu"></ion-menu-button>
-      </ion-buttons>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
 
-      <div class="divTitle">
-        <ion-title>Travel</ion-title>
-        <ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon>
-      </div>
+    <ion-title>Travel<ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon></ion-title>
 
-      <ion-buttons>
+      <ion-buttons slot="end">
         <ion-button>
           <ion-icon slot="icon-only" name="ellipsis-horizontal"></ion-icon>
         </ion-button>
       </ion-buttons>
-
-    </div>
 
   </ion-toolbar>
 </ion-header>
