--- a/src/app/menu-items/perfil/perfil.page.html
+++ b/src/app/menu-items/perfil/perfil.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Perfil</ion-title>
+
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
+
+    <ion-title>Travel<ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon></ion-title>
+
   </ion-toolbar>
 </ion-header>
 
