--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -6,24 +6,20 @@
 }
 //=============================================================================================================//
 
-.divAjuste{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.divTitle{
-  display: flex;
-  justify-content: center;
-}
-
 ion-title{
   color: var(--ion-color-dark);
   font-weight: bold;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 90px 1px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
 }
 
-#logoPrincipal{
-  font-size: 23px;
+ion-title ion-icon{
+  font-size: 24px;
 }
 
 //=============================================================================================================//
