alteração de header entre as tabs e alteração no codigo dos icones

--- a/src/app/tabs/tab5/tab5.page.html
+++ b/src/app/tabs/tab5/tab5.page.html
@@ -1,5 +1,10 @@
 <ion-content>
-  <ion-toolbar>
-    <ion-searchbar ></ion-searchbar>
-  </ion-toolbar>
+  <ion-list>
+    <ion-item>
+      <ion-label>
+        Buceta
+      </ion-label>
+      <ion-icon name="open-outline"></ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
