--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,8 +5,19 @@
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
 
-    <ion-title>Travel<ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon></ion-title>
-
+    <ion-title  *ngIf='selectedTab == "tab1" || selectedTab =="tab2" || selectedTab =="tab3"'>Travel<ion-icon src= "/assets/logoprincipal.svg" id="logoPrincipal"></ion-icon></ion-title>
+    <div id="notifica" *ngIf='selectedTab == "tab4"'>
+      <ion-title> 
+        Notificações
+      </ion-title>
+      <ion-buttons>
+        <ion-button>
+          <ion-icon name="search-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </div>
+    
+    <ion-searchbar *ngIf='selectedTab == "tab5"' (ionChange)="onSearch($event)"></ion-searchbar>
       <ion-buttons slot="end">
         <ion-button>
           <ion-icon slot="icon-only" name="ellipsis-horizontal"></ion-icon>
@@ -17,27 +28,27 @@
 </ion-header>
 
 <ion-content>
-
-  <ion-tabs>
+  <p>buceta</p>
+  <ion-tabs (ionTabsDidChange)="setCurrentTab($event)">
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="tab1" class="tabMenor" (click)="btnHome()">
+      <ion-tab-button tab="tab1" class="tabMenor">
         <ion-icon [name]="homeToggleIcon"></ion-icon>
       </ion-tab-button>
-      <ion-tab-button tab="tab2" class="tabMenor" (click)="btnStar()">
+      <ion-tab-button tab="tab2" class="tabMenor">
         <ion-icon [name]="starToggleIcon"></ion-icon>
       </ion-tab-button>
 
-      <ion-card class="tabMaior" (click)="btnAdd()">
+      <ion-card class="tabMaior">
         <ion-tab-button tab="tab3">
           <ion-icon [name]="addToggleIcon"></ion-icon>
         </ion-tab-button>
       </ion-card>
 
-      <ion-tab-button tab="tab4" class="tabMenor" (click)="btnNoti()">
+      <ion-tab-button tab="tab4" class="tabMenor">
         <ion-badge color="danger">+9</ion-badge>
         <ion-icon [name]="notiToggleIcon"></ion-icon>
       </ion-tab-button>
-      <ion-tab-button tab="tab5" class="tabMenor" (click)="btnSearch()">
+      <ion-tab-button tab="tab5" class="tabMenor">
         <ion-icon [name]="searchToggleIcon"></ion-icon>
       </ion-tab-button>
     </ion-tab-bar>
