--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -74,3 +74,11 @@ ion-badge{
   min-height: 12px;
   line-height: 7px;
 }
+ion-searchbar{
+  --border-radius: 50px;
+}
+#notifica{
+  width: 100%;
+  display:flex;
+  flex-direction: row-reverse;
+}
