--- a/src/app/tabs/tab5/tab5.page.html
+++ b/src/app/tabs/tab5/tab5.page.html
@@ -1,8 +1,8 @@
 <ion-content>
-  <ion-list>
-    <ion-item>
+  <ion-list >
+    <ion-item *ngFor="let op of this.search.cacheSearch">
       <ion-label>
-        Buceta
+        {{op}}
       </ion-label>
       <ion-icon name="open-outline"></ion-icon>
     </ion-item>
