--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -17,7 +17,7 @@
       </ion-buttons>
     </div>
     
-    <ion-searchbar *ngIf='selectedTab == "tab5"' (ionChange)="onSearch($event)"></ion-searchbar>
+    <ion-searchbar *ngIf='selectedTab == "tab5"' (ionChange)="filter($event)" (keypress)="onSearch($event)" animated=true></ion-searchbar>
       <ion-buttons slot="end">
         <ion-button>
           <ion-icon slot="icon-only" name="ellipsis-horizontal"></ion-icon>
@@ -28,28 +28,27 @@
 </ion-header>
 
 <ion-content>
-  <p>buceta</p>
-  <ion-tabs (ionTabsDidChange)="setCurrentTab($event)">
+  <ion-tabs (ionTabsDidChange)="setCurrentTab($event)" >
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="tab1" class="tabMenor">
-        <ion-icon [name]="homeToggleIcon"></ion-icon>
+        <ion-icon [name]="selectedTab == 'tab1'?'home':'home-outline'"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="tab2" class="tabMenor">
-        <ion-icon [name]="starToggleIcon"></ion-icon>
+        <ion-icon [name]="selectedTab =='tab2'?'star':'star-outline'"></ion-icon>
       </ion-tab-button>
 
       <ion-card class="tabMaior">
         <ion-tab-button tab="tab3">
-          <ion-icon [name]="addToggleIcon"></ion-icon>
+          <ion-icon [name]="selectedTab =='tab3'?'add':'add-outline'"></ion-icon>
         </ion-tab-button>
       </ion-card>
 
       <ion-tab-button tab="tab4" class="tabMenor">
         <ion-badge color="danger">+9</ion-badge>
-        <ion-icon [name]="notiToggleIcon"></ion-icon>
+        <ion-icon [name]="selectedTab == 'tab4'?'notifications':'notifications-outline'"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="tab5" class="tabMenor">
-        <ion-icon [name]="searchToggleIcon"></ion-icon>
+        <ion-icon [name]="selectedTab == 'tab5'?'search':'search-outline'"></ion-icon>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
