Header da tela de Post modificado e tela de Post iniciada

--- a/src/app/tabs/tab3/tab3.page.html
+++ b/src/app/tabs/tab3/tab3.page.html
@@ -1,9 +1,14 @@
 <ion-content>
-  <ion-card>
-    <ion-item>
-      <ion-label>
-        Criar publicação
-      </ion-label>
-    </ion-item>
-  </ion-card>
+  <form>
+    <ion-list lines="full">
+      <ion-item>
+        <ion-input type="text" placeholder="Título da postagem"></ion-input>
+        <ion-icon name="create-outline"></ion-icon>
+      </ion-item>
+      <ion-item>
+        <ion-input type="text" placeholder="Localização"></ion-input>
+        <ion-icon name="create-outline"></ion-icon>
+      </ion-item>
+    </ion-list>
+  </form>
 </ion-content>
